# 24b-emb-expert-2-andrefrugis

./: CMakeLists.txt
freertos/: CMakeLists.txt
main/: CMakeLists.txt  main.c
oled1_lib/: CMakeLists.txt  ssd1306.c
